# python-dirp

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  go.mod  main_c.go  pyproject.toml  setup.py
.github/workflows/: publish.yml  wheels.yml
os/: common.py  linux.py  macos.py  windows.py
python/: PUBLISH.md  README.md  build_go_lib.py
python/dirp/: __init__.py  platform_lib.py  wrapper.py
python/py_dirp.egg-info/: PKG-INFO  SOURCES.txt
