[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-dirp"
version = "0.1.3"
description = "Python binding for dirp (Go)"
readme = "python/README.md"
requires-python = ">=3.9"
authors = [{ name = "dirp contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Go",
  "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["dirp*"]

[tool.setuptools.package-data]
dirp = ["*.so", "*.dylib", "*.dll"]
